<resources>
    <string name="app_name">TopDocTest</string>
    <string name="welcome_to">Welcome </string>
    <string name="sign_in_your_account">Sign in your account</string>
    <string name="Login_Page">Login Page</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="password_hint">• • • • •</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t\ have \ an \ account?</string>
    <string name="we_need_a_few_details_to_get_your_account_ready">We need a few details to get your account ready</string>
    <string name="we_need_a_few_details_to_get_your_new_password_ready">We need a few details to get your new password ready </string>
    <string name="john">John</string>
    <string name="user_name">Username</string>
    <!--<string name="last_name">Last Name</string>-->
    <string name="terry">Terry</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="update_password">Update Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forgot_your_password">forgot password</string>
</resources>